<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/darkBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settingsProfileId"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/default_avata"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settingsDisplayName"
        android:layout_width="246dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:text="@string/display_name"
        android:textColor="@android:color/background_light"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsProfileId" />

    <TextView
        android:id="@+id/settingsStatusText"
        android:layout_width="246dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:text="@string/default_status"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsDisplayName" />

    <Button
        android:id="@+id/settingsChangeImgBtn"
        android:layout_width="225dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:text="@string/change_profile_photo"
        android:stateListAnimator="@drawable/state_list_animator_z"
        android:background="@drawable/bt_shape"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsStatusText" />

    <Button
        android:id="@+id/settingsChangeStatusBtn"
        android:layout_width="225dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bt_shape"
        android:stateListAnimator="@drawable/state_list_animator_z"
        android:textColor="@android:color/background_light"
        android:text="@string/edit_profile_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsChangeImgBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>